// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  border-radius: 0.25rem;
  outline: none;
  padding-right: 2rem;
  padding-left: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
}

.c3 {
  border-radius: 0.25rem;
}

.c3:focus-visible {
  position: relative;
  outline: none !important;
}

.c3:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c3:hover,
.c3:active,
.c3:focus {
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-name: cMFrpC;
  animation-name: cMFrpC;
}

.c4 {
  display: inline-block;
  padding-top: 0.1rem;
  border-radius: 0.25rem;
  color: #44aeff;
  font-size: 2.6rem;
  line-height: 1.2;
  font-weight: bold;
}

.c8 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: white;
  fill: white;
}

.c8:focus-visible {
  position: relative;
  outline: none !important;
}

.c8:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c8:hover {
  color: white;
  fill: white;
}

.c9 {
  margin: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  max-width: 45rem;
  margin: auto;
}

.c12 > * {
  margin: 0.5rem 0.5rem 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c6:first-of-type {
  margin-top: 0.86rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: inline-block;
  width: 100%;
  max-width: 2.3rem;
  height: 100%;
  max-height: 2.3rem;
  padding: 0 0.5rem 0 0.2rem;
  -webkit-filter: brightness(0) invert(1);
  filter: brightness(0) invert(1);
}

.c10:hover {
  -webkit-filter: brightness(0) invert(1) opacity(70%);
  filter: brightness(0) invert(1) opacity(70%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  border-top: solid #1e1e1e 0.15rem;
  background-color: #1e1e1e;
  background-position: center;
  background-size: cover;
  color: #ffffff;
}

.c2 {
  text-align: center;
}

.c5 {
  text-align: center;
}

@media (min-width:50.25rem) {
  .c1 {
    padding-right: unset;
    padding-left: unset;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c3:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (min-width:32.25rem) {
  .c4 {
    font-size: 3rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c8:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    color: white;
    fill: white;
  }

  .c8:hover {
    color: white;
    fill: white;
  }
}

@media (min-width:32.25rem) {
  .c0 {
    padding: 2rem 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    border-top: solid #44aeff 0.15rem;
    background-color: #050d1b;
  }
}

<div>
  <footer
    class="c0"
    id="footer"
  >
    <div
      class="c1 c2"
    >
      <a
        class="c3"
        href="/"
      >
        <span
          aria-label="Home page"
          class="c4"
        >
          G
        </span>
      </a>
    </div>
    <div
      class="c5"
    >
      <span
        class="c6 c7"
      >
        Built in
        <a
          class="c8"
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c9"
          >
            <img
              alt="React"
              class="c10"
              height="5"
              width="5"
            />
          </span>
        </a>
        with
        <a
          class="c8"
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c9"
          >
            <img
              alt="Redux"
              class="c10"
              height="5"
              width="5"
            />
          </span>
        </a>
        Hosted on
        <a
          class="c8"
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c9"
          >
            <img
              alt="Amazon Web Services"
              class="c10"
              height="5"
              style="margin-top: .8rem; max-width: 2.9rem;"
              width="8.28"
            />
          </span>
        </a>
      </span>
    </div>
    <div
      class="c11 "
    >
      <div
        class="c12"
      >
        <a
          class="c8"
          href="/blog"
        >
          <span
            class="c9"
          >
            Blog
          </span>
        </a>
        <a
          class="c8"
          href="/photography"
        >
          <span
            class="c9"
          >
            Photography
          </span>
        </a>
        <a
          class="c8"
          href="/reading-list"
        >
          <span
            class="c9"
          >
            Reading list
          </span>
        </a>
        <a
          class="c8"
          href="/races"
        >
          <span
            class="c9"
          >
            Races
          </span>
        </a>
        <a
          class="c8"
          href="/work"
        >
          <span
            class="c9"
          >
            Work
          </span>
        </a>
      </div>
      <div
        class="c12"
      >
        <a
          class="c8"
          href="/contact"
        >
          <span
            class="c9"
          >
            Contact
          </span>
        </a>
        <a
          class="c8"
          href="/sitemap"
        >
          <span
            class="c9"
          >
            Site map
          </span>
        </a>
        <a
          class="c8"
          href="/privacy-policy"
        >
          <span
            class="c9"
          >
            Privacy
          </span>
        </a>
        <a
          class="c8"
          href="/login"
        >
          <span
            class="c9"
          >
            Login/Account
          </span>
        </a>
        <a
          class="c8"
          href="/status"
        >
          <span
            class="c9"
          >
            Status
          </span>
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  border-radius: 0.25rem;
  outline: none;
  padding-right: 2rem;
  padding-left: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
}

.c3 {
  border-radius: 0.25rem;
}

.c3:focus-visible {
  position: relative;
  outline: none !important;
}

.c3:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c3:hover,
.c3:active,
.c3:focus {
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-name: cMFrpC;
  animation-name: cMFrpC;
}

.c4 {
  display: inline-block;
  padding-top: 0.1rem;
  border-radius: 0.25rem;
  color: #44aeff;
  font-size: 2.6rem;
  line-height: 1.2;
  font-weight: bold;
}

.c8 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: white;
  fill: white;
}

.c8:focus-visible {
  position: relative;
  outline: none !important;
}

.c8:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c8:hover {
  color: white;
  fill: white;
}

.c9 {
  margin: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  max-width: 45rem;
  margin: auto;
}

.c12 > * {
  margin: 0.5rem 0.5rem 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c6:first-of-type {
  margin-top: 0.86rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: inline-block;
  width: 100%;
  max-width: 2.3rem;
  height: 100%;
  max-height: 2.3rem;
  padding: 0 0.5rem 0 0.2rem;
  -webkit-filter: brightness(0) invert(1);
  filter: brightness(0) invert(1);
}

.c10:hover {
  -webkit-filter: brightness(0) invert(1) opacity(70%);
  filter: brightness(0) invert(1) opacity(70%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  border-top: solid #1e1e1e 0.15rem;
  background-color: #1e1e1e;
  background-position: center;
  background-size: cover;
  color: #ffffff;
}

.c2 {
  text-align: center;
}

.c5 {
  text-align: center;
}

@media (min-width:50.25rem) {
  .c1 {
    padding-right: unset;
    padding-left: unset;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c3:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (min-width:32.25rem) {
  .c4 {
    font-size: 3rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c8:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    color: white;
    fill: white;
  }

  .c8:hover {
    color: white;
    fill: white;
  }
}

@media (min-width:32.25rem) {
  .c0 {
    padding: 2rem 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    border-top: solid #44aeff 0.15rem;
    background-color: #050d1b;
  }
}

<div>
  <footer
    class="c0 test-custom-className"
    id="footer"
  >
    <div
      class="c1 c2"
    >
      <a
        class="c3"
        href="/"
      >
        <span
          aria-label="Home page"
          class="c4"
        >
          G
        </span>
      </a>
    </div>
    <div
      class="c5"
    >
      <span
        class="c6 c7"
      >
        Built in
        <a
          class="c8"
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c9"
          >
            <img
              alt="React"
              class="c10"
              height="5"
              width="5"
            />
          </span>
        </a>
        with
        <a
          class="c8"
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c9"
          >
            <img
              alt="Redux"
              class="c10"
              height="5"
              width="5"
            />
          </span>
        </a>
        Hosted on
        <a
          class="c8"
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c9"
          >
            <img
              alt="Amazon Web Services"
              class="c10"
              height="5"
              style="margin-top: .8rem; max-width: 2.9rem;"
              width="8.28"
            />
          </span>
        </a>
      </span>
    </div>
    <div
      class="c11 "
    >
      <div
        class="c12"
      >
        <a
          class="c8"
          href="/blog"
        >
          <span
            class="c9"
          >
            Blog
          </span>
        </a>
        <a
          class="c8"
          href="/photography"
        >
          <span
            class="c9"
          >
            Photography
          </span>
        </a>
        <a
          class="c8"
          href="/reading-list"
        >
          <span
            class="c9"
          >
            Reading list
          </span>
        </a>
        <a
          class="c8"
          href="/races"
        >
          <span
            class="c9"
          >
            Races
          </span>
        </a>
        <a
          class="c8"
          href="/work"
        >
          <span
            class="c9"
          >
            Work
          </span>
        </a>
      </div>
      <div
        class="c12"
      >
        <a
          class="c8"
          href="/contact"
        >
          <span
            class="c9"
          >
            Contact
          </span>
        </a>
        <a
          class="c8"
          href="/sitemap"
        >
          <span
            class="c9"
          >
            Site map
          </span>
        </a>
        <a
          class="c8"
          href="/privacy-policy"
        >
          <span
            class="c9"
          >
            Privacy
          </span>
        </a>
        <a
          class="c8"
          href="/login"
        >
          <span
            class="c9"
          >
            Login/Account
          </span>
        </a>
        <a
          class="c8"
          href="/status"
        >
          <span
            class="c9"
          >
            Status
          </span>
        </a>
      </div>
    </div>
  </footer>
</div>
`;
